manifests/tenants/team-a/bases/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: team-a-svc
  namespace: team-a
  labels:
    app: team-a
spec:
  type: NodePort
  selector:
    app: team-a
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
